--- a/Client/pocketCode/css/pocketCode.css
+++ b/Client/pocketCode/css/pocketCode.css
@@ -498,7 +498,7 @@
 
 /* dialog */
 .pc-dialog {
-	width: 310px;
+	max-width: 310px;
 	border-radius: 2px;
 	border-top: 1px solid #3F3F3F;
 	background-color: #282828;
@@ -583,7 +583,7 @@
 	.pc-dialogFooter button::-moz-focus-inner {
 		border: 0;
 	}
-
+/*
 .dialogFooterSingleButton button {
 	width: 100%;
 }
@@ -591,3 +591,4 @@
 .dialogFooterTwoButtons button {
 	width: 154px;
 }
+*/
